# remake

./: .cvsignore  .gitignore  .purify  .readthedocs.yml  .travis.yml  AUTHORS  Basic.mk  Basic.mk.template  ChangeLog  ChangeLog.1  ChangeLog.2  ChangeLog.GNUMake  GNUmakefile  INSTALL  INSTALL-from-source.md  Makefile.DOS  Makefile.DOS.template  Makefile.am  Makefile.am.rej  Makefile.ami  Makefile.in  NEWS  NEWS-remake.md  NEWS.remake  NMakefile  NMakefile.template  README  README-gitbranch.md  README.Amiga  README.DOS  README.DOS.template  README.OS2.template  README.W32  README.W32.template  README.WIN32  README.customs  README.cvs  README.git  README.makedb  README.md  (+144 more)
.circleci/: circle.yml  config.yml
.deps/: .gitignore
.github/: FUNDING.yml
build-aux/: .gitignore
config/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.in  dospaths.m4  mkinstalldirs  readline.h  readline.m4  texinfo.tex
debian/: Explanations  NEWS.Debian  README.Debian  README.Debian-Source  README.Debian-source  TODO.Debian  changelog  clean  control  copyright  cron.d.ex  dh_wraporig.local  dirs  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup  emacsen-startup.ex  gbp.conf  info  init.d.ex  install  make-first-existing-target.1  make-guile.docs  make-guile.install  make.manpages  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  remake-3.80+dbg-default.ex  remake-3.80+dbg.doc-base.EX  remake.info  remake.postinst  rules  watch
debug-test/: Makefile
debugger/: .gitignore  Makefile  break.c  break.h  cmd.c  cmd.h  file2line.c  file2line.h  fns.c  fns.h  info.c  info.h  msg.c  msg.h  stack.c  stack.h  subcmd.h
doc/: .cvsignore  .gitignore  Makefile.am  Makefile.in  fdl.texi  how-to-make-a-release.txt  index.html  make-stds.texi  make.1  make.1.in  make.info  make.info-1  make.info-10  make.info-11  make.info-2  make.info-3  make.info-4  make.info-5  make.info-6  make.info-7  make.info-8  make.info-9  make.texi  makedb.texi  makedb.txt  mdb.texi  remake-demo-setup.txt  remake.texi  remake_toc.html  test1.mk  version.texi
doc/doxygen/: .cvsignore  .gitignore  Doxyfile  Doxyfile.in  run_doxygen
doc/make.t2p/: .gitignore
doc/readthedocs/: .gitignore  Makefile  conf.py  features.rst  index.rst  install.rst
doc/readthedocs/debugger/: commands.rst  sessions.rst  syntax.rst
doc/readthedocs/debugger/commands/: data.rst  files.rst
doc/readthedocs/debugger/commands/breakpoints/: break.rst  watch.rst
doc/readthedocs/debugger/commands/data/: print.rst  write.rst
doc/readthedocs/debugger/commands/files/: load.rst
doc/readthedocs/debugger/commands/info/: rules.rst  tasks.rst
doc/readthedocs/debugger/commands/running/: finish.rst
doc/readthedocs/debugger/commands/set/: setqx.rst  silent.rst
doc/readthedocs/debugger/commands/show/: silent.rst
doc/readthedocs/debugger/commands/stack/: backtrace.rst
doc/sourceforge/: index.html
docs/: Makefile  conf.py  debugger.rst  features.rst  index.rst  install.rst  make.bat  manpage.rst
emacs/: .cvsignore  .gitignore  Makefile.am  Makefile.in  gud.el  makedb.el  makedb.el.in  mdb-test.el.in  mdb.el  mdb.el.in
glob/: .cvsignore  .gitignore  COPYING.LIB.old  ChangeLog  Makefile.am  Makefile.ami  Makefile.in  SMakefile  configure.bat  configure.in  fnmatch.c  fnmatch.h  glob.c  glob.h
glob/.deps/: .cvsignore  .gitignore
htdocs/: download.html  features.html  index.html  index.html~  make.html  mdb.html
i18n/: .cvsignore  Makefile.am  Makefile.in  da.po  de.mo  de.po  es.mo  es.po  fr.mo  fr.po  gl.po  he.po  ja.po  ko.mo  ko.po  make.pot  nl.mo  nl.po  pl.mo  pl.po  pt_BR.po  ru.mo  ru.po  tr.po
lib/: .gitignore  glob.c
libdebugger/: .gitignore  Makefile.am  break.c  break.h  cmd.c  cmd.h  cmd_initialize.h  commands.h  file2line.c  file2line.h  fns.c  fns.h  hello.c  hello.h  info.h  msg.h  stack.h
libdebugger/command/: break.c  break.h  chdir.c  chdir.h  comment.c  comment.h  continue.c  continue.h  delete.c  delete.h  down.c  edit.c  expand.c  expand.h  finish.c  frame.c  help.c  info.c  info.h  list.c  list.h  load.c  load.h  next.c  next.h  print.c  print.h  pwd.c  pwd.h  quit.c  quit.h  run.c  run.h  set.c  set.h  setq.c  setq.h  setqx.c  setqx.h  shell.c  (+13 more)
libdebugger/command/help/: break.h  chdir.h  comment.h  continue.h  delete.h  down.h  edit.h  expand.h  finish.h  frame.h  help.h  info.h  list.h  load.h  next.h  print.h  pwd.h  quit.h  run.h  set.h  setq.h  setqx.h  shell.h  show.h  skip.h  source.h  step.h  target.h  up.h  watch.h  where.h  write.h
m4/: .gitignore  ax_check_compile_flag.m4  extensions.m4
packaging/: remake.spec
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  Makefile.in.in.patch  Makevars  POTFILES  POTFILES.in  be.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fi.po  fr.gmo  fr.po  ga.po  gl.gmo  gl.po  he.gmo  he.po  hr.gmo  hr.po  id.po  ja.gmo  ja.po  ko.gmo  ko.po  make.pot  (+18 more)
src/: .cvsignore  .gitignore  Makefile.am  Makefile.in  alloc.c  alloca.c  ar.c  ar_fns.c  ar_fns.h  arscan.c  arscan.h  buildargv.c  buildargv.h  callgrind_format.c  callgrind_format.h  commands.c  commands.h  dbg_break.c  dbg_break.h  dbg_cmd.c  dbg_cmd.h  dbg_fns.c  dbg_fns.h  dbg_stack.c  dbg_stack.h  debug.c  debug.h  debugger.h  default.c  default.h  dep.c  dep.h  dir.c  dir_fns.c  dir_fns.h  expand.c  expand.h  file.c  file.h  file_basic.h  (+60 more)
src/debugger/: break.c  break.h  cmd.c  file2line.c  fns.c  fns.h  info.h  msg.c  stack.c  subcmd.h
src/debugger/command/: break.h  comment.h  continue.h  delete.h  down.h  edit.h  eval.h  expand.h  finish.h  frame.h  help.h  info.h  list.h  load.h  next.h  print.h  pwd.h  set.h  setq.h  shell.h  show.h  skip.h  source.h  step.h  target.h  up.h  where.h  write.h
src/debugger/command/help/: break.h  chdir.h  delete.h  down.h  eval.h  expand.h  frame.h  help.h  list.h  load.h  print.h  pwd.h  quit.h  set.h  setq.h  setqx.h  show.h  skip.h  source.h  step.h  up.h  where.h  write.h
src/w32/: Makefile.am  README.md
unittest/: .gitignore  Makefile.am  test_profile.c
(+316 files in other folders)
